src/objects/Approvers_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments to track approval Matrix Changes</description>
        <inlineHelpText>Please enter in the reason for making this change, including the requester and approver.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_1__c</fullName>
        <label>Criteria 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_2__c</fullName>
        <description>This field is to capture the region when approver type is sales director</description>
        <label>Criteria 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design_Win_Evidence__c</fullName>
        <description>- Purchase Order/ Pre-Production Order: 	Approved by Level 1 approver
- Contract/Letter of intent:			Approved by Level 1 and Level 2 approvers
- Written Confirmation from Customer:		Approved by Level 1, Level 2 and level 3 approvers</description>
        <inlineHelpText>Select the Design Win Evidence the approver shall be part of.
E.g. level 1 approvers (RVP, Controller) please include all three Design Win Evidence while the approver will be part of all three Design Win Evidence approval chains.</inlineHelpText>
        <label>Design Win Evidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Order/ Pre-Production Order</fullName>
                </value>
                <value>
                    <fullName>Contract/Letter of intent</fullName>
                </value>
                <value>
                    <fullName>Written Confirmation from Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Former_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Former Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>If( Approver__r.IsActive,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_1__c</fullName>
        <label>Threshold 1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MAG Approver</fullName>
                </value>
                <value>
                    <fullName>BL Approver</fullName>
                </value>
                <value>
                    <fullName>GAM</fullName>
                </value>
                <value>
                    <fullName>EVP</fullName>
                </value>
                <value>
                    <fullName>Segment VP</fullName>
                </value>
                <value>
                    <fullName>GSM Sales Director</fullName>
                </value>
                <value>
                    <fullName>GSM VP 1</fullName>
                </value>
                <value>
                    <fullName>GSM VP 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approver Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Criteria_1__c</columns>
        <columns>Criteria_2__c</columns>
        <columns>Threshold_1__c</columns>
        <columns>Approver__c</columns>
        <columns>Comments__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_New</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Criteria_1__c</columns>
        <columns>Criteria_2__c</columns>
        <columns>Threshold_1__c</columns>
        <columns>Approver__c</columns>
        <columns>Comments__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/19/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Criteria_1__c</field>
            <operation>contains</operation>
            <value>RSS,BLSS</value>
        </filters>
        <label>All - New</label>
    </listViews>
    <listViews>
        <fullName>All_New_MAG_BL_Approver</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Criteria_1__c</columns>
        <columns>Criteria_2__c</columns>
        <columns>Threshold_1__c</columns>
        <columns>Approver__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/19/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>MAG Approver-STAR,BL Approver-STAR</value>
        </filters>
        <label>All - MAG - BL - Approver</label>
    </listViews>
    <listViews>
        <fullName>All_New_per_user</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Criteria_2__c</columns>
        <columns>Criteria_1__c</columns>
        <columns>Threshold_1__c</columns>
        <columns>Approver__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/19/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Criteria_2__c</field>
            <operation>contains</operation>
            <value>Greater China</value>
        </filters>
        <label>All - New - per user</label>
    </listViews>
    <listViews>
        <fullName>Auto_Segment_Mismatch</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Auto Segment Mismatch</value>
        </filters>
        <label>Auto Segment Mismatch</label>
    </listViews>
    <listViews>
        <fullName>In_Active_Approvers</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <label>In-Active Approvers</label>
    </listViews>
    <listViews>
        <fullName>New_DW_Approvers</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Criteria_1__c</columns>
        <columns>Criteria_2__c</columns>
        <columns>Threshold_1__c</columns>
        <columns>Approver__c</columns>
        <columns>Comments__c</columns>
        <columns>Is_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Baji</value>
        </filters>
        <label>New DW Approvers</label>
    </listViews>
    <listViews>
        <fullName>Product_Controller</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Controller</value>
        </filters>
        <label>Product Controller</label>
    </listViews>
    <listViews>
        <fullName>Regional_Controller</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Regional Controller</label>
    </listViews>
    <listViews>
        <fullName>Regional_VPs</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Criteria_2__c</field>
            <operation>contains</operation>
        </filters>
        <label>Regional VPs</label>
    </listViews>
    <listViews>
        <fullName>Segment_VPs</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Segment VP</value>
        </filters>
        <label>Segment VPs</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Approver Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvers Matrix</pluralLabel>
    <recordTypes>
        <fullName>Direct_Oppty</fullName>
        <active>true</active>
        <label>Direct Oppty</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approver_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>( 
ISPICKVAL(Type__c , &apos;MAG Approver&apos;) || 
ISPICKVAL(Type__c, &apos;BL Approver&apos;) ||
ISPICKVAL(Type__c, &apos;GAM&apos;) || 
ISPICKVAL(Type__c, &apos;EVP&apos;) || 
ISPICKVAL(Type__c, &apos;Segment VP&apos;)
) &amp;&amp;
ISBLANK(Approver__c)</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>Approver is a required field when Type is &apos;MAG Approver&apos; or &apos;BL Approver&apos; or &apos;GAM&apos; or &apos;EVP&apos; or &apos;Segment VP.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_For_Signed_ARIA</fullName>
        <active>true</active>
        <errorConditionFormula>(
(ISPICKVAL(Type__c , &apos;MAG Approver&apos;) &amp;&amp; ISPICKVAL(Criteria_2__c , &apos;STAR&apos;)) ||
(ISPICKVAL(Type__c, &apos;BL Approver&apos;) &amp;&amp; ISPICKVAL(Criteria_2__c, &apos;STAR&apos;)) ||
(ISPICKVAL(Type__c , &apos;GAM&apos;) &amp;&amp; Criteria_1__c = &apos;STAR&apos;) ||  
(ISPICKVAL(Type__c , &apos;EVP&apos;) &amp;&amp; Criteria_1__c = &apos;STAR&apos;)
) &amp;&amp;
(Approver__r.Signed_ARIA__c = False)</errorConditionFormula>
        <errorDisplayField>Approver__c</errorDisplayField>
        <errorMessage>Signed ARIA should be checked for STAR Approvers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Criteria1_Mandatory_For_Types</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISPICKVAL(Type__c , &apos;MAG Approver&apos;) || 
ISPICKVAL(Type__c, &apos;BL Approver&apos;) ||
ISPICKVAL(Type__c, &apos;GAM&apos;) ||
ISPICKVAL(Type__c, &apos;EVP&apos;) ||
ISPICKVAL(Type__c, &apos;Segment VP&apos;) ||
ISPICKVAL(Type__c, &apos;GSM VP 2&apos;)
) &amp;&amp; 
ISBLANK(Criteria_1__c)</errorConditionFormula>
        <errorDisplayField>Criteria_1__c</errorDisplayField>
        <errorMessage>&apos;Criteria 1&apos;  is a required field when Type is &apos;MAG Approver&apos; or &apos;BL Approver&apos; or &apos;GAM&apos; or &apos;EVP&apos; or &apos;Segment VP&apos; or &apos;GSM VP 2.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Criteria2_Mandatory_For_Sales_Director</fullName>
        <active>false</active>
        <description>Criteria 2(Region) is mandatory for sales director / Regional VP approver</description>
        <errorConditionFormula>(ISPICKVAL(Type__c , &apos;Sales Director Approver&apos; )|| ISPICKVAL( Type__c , &apos;Regional VP Approver&apos;)) &amp;&amp;  ISPICKVAL(Criteria_2__c , &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Criteria_2__c</errorDisplayField>
        <errorMessage>&apos;Criteria 2&apos; (Region) is a required field if Type is &apos;Sales Director&apos; OR &apos;Regional VP&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Criteria2_Mandatory_For_Types</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;GSM VP 2&apos;) 
&amp;&amp; 
ISPICKVAL(Criteria_2__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Criteria_2__c</errorDisplayField>
        <errorMessage>&apos;Criteria 2&apos; is a required field when Type is &apos;GSM VP 2.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Threshold_Mandatory_MAG_STAR_Approvers</fullName>
        <active>false</active>
        <description>This field is created to make Mag Threshold Mandatory if type is &apos;MAG approver&apos; or &apos;MAG Approver-STAR&apos;</description>
        <errorConditionFormula>(ISPICKVAL( Type__c , &apos;MAG Approver&apos;)|| ISPICKVAL( Type__c , &apos;MAG Approver-STAR&apos;) ||  ISPICKVAL(Type__c, &apos;BL Approver&apos; )||
ISPICKVAL(Type__c, &apos;BL Approver-STAR&apos; ) ) &amp;&amp; ISNULL(Threshold_1__c)</errorConditionFormula>
        <errorDisplayField>Threshold_1__c</errorDisplayField>
        <errorMessage>Threshold is a required field if Type is &apos;MAG Approver&apos; or &apos;MAG Approver-STAR&apos; or &apos;BL Approver&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( TEXT( Type__c ) )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is a required field, please select a type.</errorMessage>
    </validationRules>
</CustomObject>